2005-01-27  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (start_elf): Initialize PHYS_STARTUP->flags.  New
	variables PHDR and PHDR_LEN.  Calculate the virtual address of the
	program header if it is loaded and use them for PHYS_STARTUP->phdr
	and PHYS_STARTUP->phdr_len.
	* wortel-intern.h (struct wortel_module): Remove members
	HEADER_LOC and HEADER_SIZE.

	* startup.c (map): Loop over map requests until we mapped the
	whole range in case not all map items fit into a single reply
	message.	

2005-01-26  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (start_elf): Calculate the size of the file part of a
	mapping.

	* wortel.c (start_elf): Do not add an extra zero byte to argz.

	* wortel.c (start_elf): Initialize PHYS_STARTUP->envz and
	PHYS_STARTUP->envz_len.

2005-01-11  Neal H. Walfield  <neal@gnu.org>

	* startup.c (physmem_map): Rename . . .
	(allocate): . . . to this.  Rewrite it.
	(map): New function.
	(cmain): Call map, not physmem_map.
	* wortel.c (setup_components): Allocate an extra thread for the
	task server.
	(start_elf): Update assert.

2005-01-10  Bas Wijnen  <shevek@fmf.nl>

	* wortel.h (wortel_get_mem): Change grant_items to map_items to
	match their use.

2005-01-07  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Preface __VA_ARGS__ with ## thereby making it
	optional.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (bootdir): New variable.
	(boot_PROGRAMS): Use this instead of noinst_PROGRAMS.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Include program_name and __FUNCTION__ in
	output.

2004-11-02  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (deva_master): New global variable.
	(serve_bootstrap_requests): New variable CUR_DEVA.  Handle
	WORTEL_MSG_GET_DEVA_CAP_REQUEST and WORTEL_MSG_GET_DEVA_CAP_REPLY.
	When replying to deva's bootstrap request, give it all the info we
	have.
	
	* wortel.c (start_elf): Initialize PHYS_STARTUP->task.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>
